--- a/frontend/src/presentation/components/carrouselFilm/CarrouselFilm.css
+++ b/frontend/src/presentation/components/carrouselFilm/CarrouselFilm.css
@@ -90,9 +90,9 @@
   background-color: transparent;
   border-radius: 1em;
   outline: none;
-  box-shadow: 0 0 .1em .1em var(--glow-color),
+  /*box-shadow: 0 0 .1em .1em var(--glow-color),
          0 0 .1em .1em var(--glow-spread-color),
-         inset 0 0 .1em .1em var(--glow-color);
+         inset 0 0 .1em .1em var(--glow-color);*/
   text-shadow: 0 0 .5em var(black);
   position: relative;
   transition: all 0.3s;
