--- a/frontend/src/presentation/components/modalUser/ModalUser.css
+++ b/frontend/src/presentation/components/modalUser/ModalUser.css
@@ -86,4 +86,19 @@
   .section.active {
     display: block;
   }
+  .datosPersonales_title{
+    font-size: 2.5rem;
+    text-align: center;
+  }
   
+  .datosPersonales_datos{
+    border: .1rem solid red;
+    padding: .6rem;
+    width: 65rem;
+    font-size: 2rem;
+    display: flex;
+    justify-content: space-between;
+  }
+  .datosPersonales_datos svg{
+    cursor: pointer;
+  }
