--- a/frontend/src/presentation/components/carrouselFilm/CarrouselFilm.css
+++ b/frontend/src/presentation/components/carrouselFilm/CarrouselFilm.css
@@ -7,8 +7,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: rgb(178,0,39,.8);
-  background: linear-gradient(162deg, rgba(178,0,39,.8) 5%, rgba(0,0,0,0.958420868347339) 55%, rgba(0,0,0,1) 88%);
   
 }
   .carrousel-wrapper {
@@ -31,18 +29,27 @@
 }
 .filter-container Button{
   margin-right: 3rem;
-  margin-top: 3rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   
 }
+
 .column{
   margin-top: 3rem;
+  
   
  
 }
 .row{
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 3rem;
+  width: 100vw;
+  background: rgb(178,0,39,.8);
+  background: linear-gradient(162deg, rgba(178,0,39,.8) 5%, rgba(0,0,0,0.958420868347339) 65%, rgba(0,0,0,1) 88%);
+
+   
   
 }
 
@@ -50,7 +57,7 @@
 .description {
   
   margin-top: 10px;
-  margin-right: 15rem;
+  margin-right: 10rem;
   color: white;
   font-size: 2rem;
 }
