--- a/frontend/src/presentation/components/carrouselFilm/CarrouselFilm.css
+++ b/frontend/src/presentation/components/carrouselFilm/CarrouselFilm.css
@@ -109,7 +109,13 @@
 .poster-image {
   width: 30rem;
   height: 40rem;
-  margin-left: 30rem;
- 
+  margin-left: 20rem;
+  
 }
-
+.buttons-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 3rem;
+}
