--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,6 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 :root {
   --main-bg: black;
   --glow-color: #ff0e43;
@@ -9,12 +12,11 @@
 
 html {
   font-size: 62.5%;
+  font-family: 'Roboto', sans-serif;
 
 }
 body {
   margin: 0 auto;
   background: rgb(0,0,0);
-  background: linear-gradient(171deg, rgba(0,0,0,1) 64%, rgba(178,0,39,1) 90%, rgba(255,14,67,1) 100%);           0 0 4em 2em var(--glow-spread-color),
-  inset 0 0 .75em .25em var(--glow-color);
 }
    
