--- a/frontend/src/presentation/components/hero/Hero.css
+++ b/frontend/src/presentation/components/hero/Hero.css
@@ -39,7 +39,7 @@
     font-size: 2.5rem;    
     
 }
-.hero button{
+.hero__button{
     border:.2rem solid var(--btn-color);
     background-color: var( --glow-spread-color);
     color:white;
@@ -48,17 +48,18 @@
     padding: 1.5rem;
     font-size: 2rem;
     cursor: pointer;
+    text-decoration: none;
 }
-button:hover {
+.hero__button:hover {
     color: var(--white);
     background-color: var(--glow-color);
-    box-shadow: 0 0 1em .25em black,
+    /*box-shadow: 0 0 1em .25em black,
            0 0 4em 2em var(--glow-spread-color),
-           inset 0 0 .75em .25em var(--glow-color);
+           inset 0 0 .75em .25em var(--glow-color);*/
    }
    
    button:active {
-    box-shadow: 0 0 0.6em .25em var(--glow-color),
-           0 0 2.5em 2em var(--glow-spread-color),
-           inset 0 0 .5em .25em var(--glow-color);
+    box-shadow: 0 0 0.2rem .2rem var(--glow-color),
+           0 0 .5rem .3rem var(--glow-spread-color),
+           inset 0 0 .2rem .2rem var(--glow-color);
    }
